<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Games</string>
    <string name="Title1">Software Architecture</string>
    <string name="Title2">Sandipan Das</string>
    <string name="Title3">Leonardo Lopez</string>
    <string name="Helicopter1">Heli 1</string>
    <string name="Helicopter2">Heli 2</string>
    <string name="Helicopter3">Heli 3</string>
    <string name="Pong">Pong</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_helicopter1">Helicopter1</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_helicopter2">Helicopter2</string>
    <string name="title_activity_helicopter3">Helicopter3</string>
    <string name="title_activity_pong">Pong</string>
    <string name="title_activity_heli1">Heli1</string>
    <string name="hello_world">Hello world!</string>

</resources>
